Fixed schema name overflow in nested categories.

--- a/frontend/app/shared/components/schema-category.component.scss
+++ b/frontend/app/shared/components/schema-category.component.scss
@@ -91,3 +91,9 @@ ul.nav-light {
     margin-right: 0;
     font-size: 100%;
 }
+
+.category,
+.nav-panel,
+sqx-schema-category {
+    max-width: 100%;
+}
